--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,16 @@ description = ""
 authors = ["bradley-butcher <bradleydpbutcher@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7.11"
-spacy = "^2.1.0"
+python = "^3.9"
 tqdm = "^4.62.3"
-neuralcoref = "^4.0"
 "pdfminer.six" = "^20211012"
-pandas = "^1.3.4"
-opennre = { git = "https://github.com/thunlp/OpenNRE", branch="master"}
-torch = "1.6.0"
-transformers = "3.4.0"
-scikit-learn = "0.22.1"
-scipy = "1.4.1"
-nltk = "3.4.5"
-# en_blackstone_proto = {url = "https://blackstone-model.s3-eu-west-1.amazonaws.com/en_blackstone_proto-0.0.1.tar.gz"}
-spaczz = "^0.5.3"
+tabulate = "^0.8.9"
+spacy = "^3.1.4"
+pandas = ">=1.3"
+PyYAML = "^6.0"
+transformers = "^4.12.3"
+torch = "^1.10.0"
+sentence-transformers = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
