added evidence mechanisms to code, made generic masks for arbitrary chaining of case information, added vectorization for easy organization in UI

--- a/schema/categories.yml
+++ b/schema/categories.yml
@@ -29,6 +29,7 @@ offenses:
   - false accounting
   - causing an explosion with an intent to endanger life
   - engaging in conduct in preparation of terrorist acts
+  - unknown
 premeditated:
   - premeditated
   - not premeditated
