added mask function and export functionality

--- a/schema/demo_categories.yml
+++ b/schema/demo_categories.yml
@@ -3,14 +3,14 @@ offenses:
   - rape
   - manslaughter
   - other
-vulnerable_victim:
-  - vulnerable
-  - not vulnerable
 race_aggrevating:
   - race an aggrevating factor
-  - race not an aggrevating factor
+  - none
 victim_sex:
   - male
   - female
   - unknown
 victim_age: continuous
+vulnerable_victim:
+  - vulnerable
+  - not vulnerable
