--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ sentence-transformers = "^2.1.0"
 datasets = "^1.15.1"
 Flask = "^2.0.2"
 Flask-Cors = "^3.0.10"
+presidio-analyzer = "^2.2.23"
+presidio-anonymizer = "^2.2.23"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
