--- a/user_interface/client/package.json
+++ b/user_interface/client/package.json
@@ -18,7 +18,8 @@
     "vue": "^3.2.26",
     "vue-router": "^4.0.12",
     "vue-sidebar-menu": "^5.1.2",
-    "vue-universal-modal": "^1.1.3"
+    "vue-universal-modal": "^1.1.3",
+    "vue3-popper": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
