--- a/user_interface/client/package.json
+++ b/user_interface/client/package.json
@@ -1,36 +1,33 @@
 {
-  "name": "client",
+  "name": "client_vue2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "watch": "npm-watch"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
-    "jquery": "^3.6.0",
-    "sockjs": "^0.3.24",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.12",
-    "vue-sidebar-menu": "^5.1.2",
-    "vue-universal-modal": "^1.1.3",
-    "vue3-popper": "^1.4.1"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.45.0",
-    "sass-loader": "^10.1.1"
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -38,7 +35,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
