--- a/schema/questions.yml
+++ b/schema/questions.yml
@@ -1,70 +1,69 @@
-offenses: 
-  - What crime was commited?
-  - What was the conviction?
-  - What offense was commited?
-defendants: 
-  - Who committed the crime? 
-  - Who was the defendant? 
-  - Who was convicted?
-  - R v ?
-victims: 
-  - Who was the victim?
-  - Who was the victim of the crime?
-outcome: 
-  - What was the minimum sentence?
-  - What was offender sentenced to?
-premeditated: 
-  - Was the crime premeditated?
-  - Was the crime planned?
-weapon: 
-  - What weapon was involved with the crime?
-  - What weapon was used?
+victim_disability:
+  - was the victim disabled?
+  - did the victim have a disability?
+victim_employment_status:
+  - was the victim employed?
+  - did the victim have a job?
+victim_pregnancy:
+  - was the victim pregnant?
+  - was the victim with child?
+victim_race:
+  - what race was the victim?
+  - was the victim black?
+  - was the victim white?
+  - was the victim asian?
+victim_religion:
+  - what religion was the victim?
+  - was the victim a christian?
+  - was the victim an athiest? 
+  - was the victim a muslim? 
+  - was the victim a hindu?
+  - was the victim a sihk?
+  - was the victim a jew?
+  - was the victim a buddist?
+victim_sex:
+  - what sex was the victim?
+  - was the victim a male?
+  - was the victim a female?
+victim_sexual_orientation:
+  - what was the victims sexual orientation?
+victim_domestic_abuse:
+  - was there any domestic abuse?
+  - was the victim abused?
+racially_motivated:
+  - was the crime racially motiviated?
+  - was there racism?
+  - is racist?
+sexually_motivated:
+  - was the crime sexually motivated?
+  - was the victim sexually abused?
+  - was the victim raped?
+premeditated:
+  - was the crime planned?
+  - was there any premedidation?
+remorse:
+  - was the defendant remorseful?
+  - remorse?
 vulnerable_victim:
-  - Is the victim vulnerable?
-  - Was the victim of the crime vulnerable?
-  - victim vulnerable?
+  - was the victim vulnerable?
+  - vulnerable?
 prior_convictions:
-  - Does the offender have prior convictions?
+  - prior convictions?
+  - did the defendant have prior convictions?
+  - previous crimes?
 physical_abuse:
-  - Was there physical abuse?
-  - Was the victim subject to physical abuse?
+  - was the victim physically abused?
   - physical abuse?
 emotional_abuse:
-  - Was there emotional abuse?
-  - Was the victim subject to emotional abuse?
+  - was the victim emotionally abused?
+  - mental abuse?
   - emotional abuse?
 age_mitigating:
-  - Was age a mitigating factor?
-  - Did the age of offender mitigate the crime?
-race_aggrevating:
-  - Was there a racist motivation for the crime?
-  - Was the crime aggrevated by racism?
-religious_aggrevating:
-  - Was there a religious motivation for the crime?
-  - Was the crime aggrevated by religion?
-offender_confession:
-  - Did the offender confess to commiting the crime?
-  - Did the offender plead guilty?
-victim_sex:
-  - Was the victim a male man?
-  - Was the victim a female woman?
-  - What gender was the victim?
-victim_age:
-  - What age was the victim?
-  - How old was the victim?
-  - How many years old was the victim?
-offender_age:
-  - What age was the offender?
-  - How old was the offender?
-  - How many years old was offender?
-offender_sex:
-  - Was the offender a male man?
-  - Was the offender a female woman?
-  - What gender was the offender?
+  - was age a mitigating factor?
 relationship:
-  - What was the relationship between the victim and offender?
-  - How did the offender know the victim?
-  - Were the victim and offender strangers?
-  - Had the victim and offender previously been in a relationship?
-  - Were the victim and offender family?
-
+  - was the victim family?
+  - was the victim a friend?
+  - was the victim a romantic partner?
+  - was the victim a colleague?
+  - was the victim a stranger?
+  - what was the relationship?
