--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,19 +8,17 @@ authors = ["bradley-butcher <bradleydpbutcher@gmail.com>"]
 python = "^3.9"
 tqdm = "^4.62.3"
 "pdfminer.six" = "^20211012"
-tabulate = "^0.8.9"
 spacy = "^3.1.4"
 pandas = ">=1.3"
 PyYAML = "^6.0"
-transformers = "^4.12.3"
-torch = "^1.10.0"
-sentence-transformers = "^2.1.0"
-datasets = "^1.15.1"
 Flask = "^2.0.2"
 Flask-Cors = "^3.0.10"
-presidio-analyzer = "^2.2.23"
-presidio-anonymizer = "^2.2.23"
 
+[tool.poetry.extras]
+transformers = ["transformers^4.12.3", "torch^1.10.0", "sentence-transformers^2.1.0", "datasets^1.15.1"]
+
+[tool.poetry.dependencies.en_core_web_sm]
+url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
