--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -143,3 +142,5 @@ cython_debug/
 .vscode/
 
 pdfs/
+
+!user_interface/client/dist/*
