--- a/user_interface/client/package.json
+++ b/user_interface/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.1",
     "vue": "^2.6.11",
     "vue-dragscroll": "^3.0.1",
     "vue-router": "^3.5.3",
