--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ PyYAML = "^6.0"
 Flask = "^2.0.2"
 Flask-Cors = "^3.0.10"
 scikit-learn = "^1.1.1"
+activeweasul = { git = "https://github.com/Bradley-Butcher/ActiveWeaSuL.git", branch = "main" }
+
 
 [tool.poetry.extras]
 transformers = ["transformers^4.12.3", "torch^1.10.0", "sentence-transformers^2.1.0", "datasets^1.15.1"]
